# LIRiAP-QGIS

./: .gitignore  README.md  requirements.txt  sync_to_provider.ps1  sync_to_provider.sh
.github/workflows/: ci.yml  release.yml
LIRiAP_pack/: README.md  approximation_fast_algorithm.py  approximation_fast_worker.py  approximation_standard_algorithm.py  approximation_standard_worker.py  axis_aligned_lir_algorithm.py  axis_aligned_lir_worker.py  bcrs_algorithm.py  bcrs_fast_algorithm.py  bcrs_fast_worker.py  bcrs_worker.py  contained_fast_algorithm.py  contained_fast_worker.py  contained_standard_algorithm.py  contained_standard_worker.py  event_emitter.py  help_descriptions.py  lir_rust_shim.py  numba_bootstrap.py  sdf_oracle.py  skeleton_algorithm.py  skeleton_worker.py
LiRiAP_provider/: LIRiAP_plugin.py  metadata.txt
LiRiAP_provider/algorithms/: LIRiAP_provider.py  approximation_fast_algorithm.py  bcrs_algorithm.py  (+13 more)
docs/: index.md
lir_solver/: Cargo.toml  README.md  build.sh  install_deps.sh  pyproject.toml
lir_solver/python/: benchmark.py  lir_rust_shim.py
lir_solver/python_pkg/lir_solver/: __init__.py
lir_solver/src/: certify.rs  classify.rs  convex.rs  geometry.rs  grid.rs  lib.rs  lrh.rs  pip.rs  ratio.rs  refine.rs  solver.rs
tests/: LIRiAP_visualize.py  benchmark_fill_rate.py  benchmark_sdf_vs_bcrs.py  test_axis_aligned_lir.py  test_event_emission.py  test_numba_bootstrap.py  test_real_world_comparison.py  test_sdf_oracle.py  test_tuning_constants.py  test_worker_edge_cases.py
visualisation/: LIRiAP_visualize.py  LIRiAP_visualize_steps.py
(+14 files in other folders)
